# mixapi

./: Cargo.toml
assets/layouts/: canary  semimak  sturdy
src/: args.rs  lib.rs  main.rs  temp.rs
src/routes/: body_as_html.rs  body_as_json.rs  body_as_string.rs  custom_body.rs  extract_headers.rs  get_headers.rs  headers.rs  html_as_body.rs  into_resp.rs  json.rs  json_as_body.rs  middleware.rs  middleware_msg.rs  mod.rs  params.rs  path_params.rs  query_params.rs  read_mw_custom_hdr.rs  req.rs  websock.rs
src/sys/: cpu.rs  kernel.rs  memory.rs  mod.rs  os.rs  prompt.rs  shell.rs  storage.rs  uptime.rs
src/temp_cli/: conf.rs  init.rs  mod.rs  update.rs
src/tui/: app.rs  data.rs  event_handler.rs  layoutdata.rs  mod.rs  tuistate.rs  ui.rs
src/web/: bytes.rs  headers.rs  html.rs  into_resp.rs  middleware.rs  mod.rs  params.rs  websock.rs
utils/layouts/: default.conf  graphite
utils/wordlists/: 1k.txt
