[package]
name = "mixapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros", "ws"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
confy = "0.6.1"
anyhow = "1.0"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.29.0"
