[package]
name = "mixapi"
version = "0.1.0"
edition = "2024"
homepage = "https://docs.rs/mixapi"
description = "A short description of my package"
license = "MIT OR Apache-2.0"
keywords = [ "axum", "clap", "ratatui", "tui" ]
repository = "https://github.com/sumit-modak/mixapi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
confy = "0.6.1"
anyhow = "1.0"
crossterm = "0.28.0"
rand = "0.9.1"
ratatui = "0.29.0"
